--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "axion": "^0.1.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.4.1",
+    "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
