--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "jquery": "^3.6.0",
+    "jsdoc": "^3.6.11",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
