--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdoc": "^3.6.11",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
+    "vee-validate": "^3.4.14",
     "vue": "^2.5.2",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^3.0.1",
